Fix project img link overflow and add gitignore file

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -909,7 +909,7 @@ nav li:nth-child(5) {
   .featured-image {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: fit-content;
   }
 
   .featured-text {
